--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
 		background: url(../img/bg.ipg.jpeg);
+		background-size: cover;
 }
 
 
@@ -15,25 +16,24 @@ body{
 	height: 50vw;
 	border: 20px solid #fff;
 	background: #fff;
+	margin: auto;
 }
 
 .ba-desk {
     margin: auto;
-    width: 600px;
-	height: 600px;
+    width: 100%;
+	height: 100%;
 	border: 2px solid #bda587;
 }
 
 .ba-dark {
 	width: 100%;
 	height: 50%;
-	float: left;
 }
 
 .ba-white {
 	width: 100%;
 	height: 50%;
-	float: left;
 }
 
 .ba-row {
@@ -47,7 +47,7 @@ body{
 	width: 12.5%;
 	background: #B1AEB0;
 	padding: 5px;
-	height: 25%;
+	height: 100%;
 
 }
 
